--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Score -->
         <div id="scoreContainer">
             <div class="scoreCell"><h1>0</h1><h2 style="color: red;">player</h2></div>
-            <div class="scoreCell"><h1>0</h1><h2 style="color: Green;">AI</h2></div>
+            <div class="scoreCell"><h1>0</h1><h2>AI</h2></div>
         </div>
         <!-- Game -->
         <div id="gameContainer">
@@ -32,7 +32,7 @@
             </div>
             <div id="fightDisplay">
                 <div class="contentCell"><h3>You</h3></div>
-                <div class="contentCell"><h3>AI</h3></div>
+                <div class="contentCell" style="margin-left: 10px;"><h3>AI</h3></div>
             </div>
         </div>
     </div>
