--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <div class="option">Paper</div>
                 <div class="option">Scissors</div>
             </div>
-            <div id="fightDisplay">
+            <div id="fightDisplay" style="margin-left: 30px;">
                 <div class="contentCell"><h3>You</h3></div>
-                <div class="contentCell" style="margin-left: 30px;"><h3>AI</h3></div>
+                <div class="contentCell" style="margin-left: 90px;"><h3>AI</h3></div>
             </div>
         </div>
     </div>
